--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,16 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="../src/styles/index.css" />
     <link rel="stylesheet" href="./index.css" />
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%"></div>
   </body>
 </html>
